--- a/back-end/.eslintrc.json
+++ b/back-end/.eslintrc.json
@@ -12,6 +12,8 @@
     "sourceType": "module"
   },
   "rules": {
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "no-console": "off",
+    "import/extensions": { "js": "always" }
   }
 }
