--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "lint": "eslint . --ext .js,.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "lint": "eslint . --ext .js,.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,13 +16,18 @@
     "express": "^4.18.2",
     "mongoose": "^6.9.2"
   },
+  "jest": {
+    "transform": {}
+  },
   "devDependencies": {
     "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.4.3",
     "nodemon": "^2.0.20",
-    "prettier": "2.8.4"
+    "prettier": "2.8.4",
+    "supertest": "^6.3.3"
   }
 }
