Adding the front-end.

--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -3,8 +3,8 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "airbnb-base", "prettier"],
-  "plugins": ["prettier"],
+  "extends": ["plugin:react/recommended", "airbnb", "prettier"],
+  "plugins": ["react", "prettier"],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
@@ -12,7 +12,6 @@
   },
   "rules": {
     "prettier/prettier": ["error"],
-    "no-console": "off",
-    "import/extensions": { "js": "always" }
+    "no-console": "off"
   }
 }
