--- a/.gitignore
+++ b/.gitignore
@@ -69,9 +69,9 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.test
-
+.env*
+*.env
+!.env.sample
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
