--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,11 +10,16 @@
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "jquery": "^3.6.3",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-swiper": "^0.1.5",
+    "swiper": "^9.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
